<resources>
    <string name="app_name">MisCocktails</string>
    <string name="splash_message">SPLASH</string>
    <string name="title_cocktails">Cocktails</string>
    <string name="title_cantidad_cocktail">Cantidad por porción</string>
    <string name="title_ingredientes_cocktail">Ingredientes</string>
    <string name="title_preparacion_cocktail">Preparación</string>
    <string name="title_notas_cocktail">Notas</string>
    <string name="title_mantenedor_añadir_cocktail">Añadir Cocktail</string>
    <string name="title_general">General</string>
    <string name="hint_nombre_cocktail">Nombre</string>
    <string name="hint_preparacion_cocktail">Preparación</string>
    <string name="title_cocktail_imagen">Imágen</string>
    <string name="btn_tomar_foto">Tomar foto</string>
    <string name="btn_url_imagen">Url imágen</string>
    <string name="hint_cantidad_ingrediente">Cantidad</string>
    <string name="btn_anadir">Añadir</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="txt_um_oz">Oz</string>
    <string name="txt_um_ml">Ml</string>
    <string name="btn_guardar">Guardar</string>
</resources>
